# NBodyParallelOpenMP

./: .gitgnore  CMakeLists.txt  OpenMP.lib  cmake_install.cmake  nbody.in  nbody_parallel.lib  test.cpp
nbody_parallel/: CmakeLists.txt  nbody_parallel.cpp  nbody_parallel.hpp
